@@ -45,6 +45,7 @@ Wolfpack 12.9.14 Beta (SVN)
   - Added char.awardfame() and char.awardkarma() to the python api.
   - NPC can be overloaded now.
   - Items will fall to ground if you are overloaded and want to put it in your backpack.
+  - Fixed items decaying in multis, if they lay on tables.
  * Definition Changes:
   - Tinker buy some items now
   - Bench (0x1049) which was crafted was "unusable"
